--- a/requirements.in
+++ b/requirements.in
@@ -1,1 +1,12 @@
 wheel
+jupyter-book
+jupyter-contrib-nbextensions
+git+https://github.com/mkrphys/ipython-tikzmagic.git
+
+numpy
+scipy
+sympy
+matplotlib
+
+pint
+fluids
