--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,474 @@
 #
 #    pip-compile
 #
-wheel==0.37.1
+alabaster==0.7.12
+    # via sphinx
+anyio==3.6.1
+    # via jupyter-server
+appnope==0.1.3
+    # via
+    #   ipykernel
+    #   ipython
+argon2-cffi==21.3.0
+    # via
+    #   jupyter-server
+    #   notebook
+argon2-cffi-bindings==21.2.0
+    # via argon2-cffi
+asttokens==2.0.8
+    # via stack-data
+attrs==21.4.0
+    # via
+    #   jsonschema
+    #   jupyter-cache
+    #   markdown-it-py
+    #   sphinx-external-toc
+babel==2.10.3
+    # via sphinx
+backcall==0.2.0
+    # via ipython
+beautifulsoup4==4.11.1
+    # via
+    #   nbconvert
+    #   pydata-sphinx-theme
+bleach==5.0.1
+    # via nbconvert
+certifi==2022.9.24
+    # via requests
+cffi==1.15.1
+    # via argon2-cffi-bindings
+charset-normalizer==2.1.1
+    # via requests
+click==8.1.3
+    # via
+    #   jupyter-book
+    #   sphinx-external-toc
+colorama==0.4.5
+    # via nbdime
+contourpy==1.0.5
+    # via matplotlib
+cycler==0.11.0
+    # via matplotlib
+debugpy==1.6.3
+    # via ipykernel
+decorator==5.1.1
+    # via ipython
+defusedxml==0.7.1
+    # via nbconvert
+docutils==0.17.1
+    # via
+    #   jupyter-book
+    #   myst-nb
+    #   myst-parser
+    #   pybtex-docutils
+    #   pydata-sphinx-theme
+    #   sphinx
+    #   sphinx-togglebutton
+    #   sphinxcontrib-bibtex
+entrypoints==0.4
+    # via
+    #   jupyter-client
+    #   nbconvert
+executing==1.1.1
+    # via stack-data
+fastjsonschema==2.16.2
+    # via nbformat
+fluids==1.0.22
     # via -r requirements.in
+fonttools==4.37.4
+    # via matplotlib
+gitdb==4.0.9
+    # via gitpython
+gitpython==3.1.28
+    # via nbdime
+greenlet==1.1.3
+    # via sqlalchemy
+idna==3.4
+    # via
+    #   anyio
+    #   requests
+imagesize==1.4.1
+    # via sphinx
+importlib-metadata==5.0.0
+    # via myst-nb
+ipykernel==6.16.0
+    # via
+    #   ipywidgets
+    #   notebook
+ipython==8.5.0
+    # via
+    #   ipykernel
+    #   ipython-tikzmagic
+    #   ipywidgets
+    #   jupyter-latex-envs
+    #   jupyter-sphinx
+    #   myst-nb
+ipython-genutils==0.2.0
+    # via
+    #   ipywidgets
+    #   jupyter-contrib-nbextensions
+    #   notebook
+ipython-tikzmagic @ git+https://github.com/mkrphys/ipython-tikzmagic.git
+    # via -r requirements.in
+ipywidgets==7.7.2
+    # via
+    #   jupyter-sphinx
+    #   myst-nb
+jedi==0.18.1
+    # via ipython
+jinja2==3.1.2
+    # via
+    #   jupyter-book
+    #   jupyter-server
+    #   myst-parser
+    #   nbconvert
+    #   nbdime
+    #   notebook
+    #   sphinx
+jsonschema==3.2.0
+    # via
+    #   jupyter-book
+    #   nbformat
+jupyter-book==0.13.1
+    # via -r requirements.in
+jupyter-cache==0.4.3
+    # via myst-nb
+jupyter-client==7.3.5
+    # via
+    #   ipykernel
+    #   jupyter-server
+    #   nbclient
+    #   notebook
+jupyter-contrib-core==0.4.0
+    # via
+    #   jupyter-contrib-nbextensions
+    #   jupyter-nbextensions-configurator
+jupyter-contrib-nbextensions==0.5.1
+    # via -r requirements.in
+jupyter-core==4.11.1
+    # via
+    #   jupyter-client
+    #   jupyter-contrib-core
+    #   jupyter-contrib-nbextensions
+    #   jupyter-latex-envs
+    #   jupyter-nbextensions-configurator
+    #   jupyter-server
+    #   nbconvert
+    #   nbformat
+    #   notebook
+jupyter-highlight-selected-word==0.2.0
+    # via jupyter-contrib-nbextensions
+jupyter-latex-envs==1.4.6
+    # via jupyter-contrib-nbextensions
+jupyter-nbextensions-configurator==0.5.0
+    # via jupyter-contrib-nbextensions
+jupyter-server==1.19.1
+    # via
+    #   jupyter-server-mathjax
+    #   nbdime
+jupyter-server-mathjax==0.2.6
+    # via nbdime
+jupyter-sphinx==0.3.2
+    # via myst-nb
+jupyterlab-pygments==0.2.2
+    # via nbconvert
+jupyterlab-widgets==1.1.1
+    # via ipywidgets
+kiwisolver==1.4.4
+    # via matplotlib
+latexcodec==2.0.1
+    # via pybtex
+linkify-it-py==1.0.3
+    # via jupyter-book
+lxml==4.9.1
+    # via
+    #   jupyter-contrib-nbextensions
+    #   nbconvert
+markdown-it-py==1.1.0
+    # via
+    #   mdit-py-plugins
+    #   myst-parser
+markupsafe==2.1.1
+    # via
+    #   jinja2
+    #   nbconvert
+matplotlib==3.6.1
+    # via -r requirements.in
+matplotlib-inline==0.1.6
+    # via
+    #   ipykernel
+    #   ipython
+mdit-py-plugins==0.2.8
+    # via myst-parser
+mistune==0.8.4
+    # via nbconvert
+mpmath==1.2.1
+    # via sympy
+myst-nb==0.13.2
+    # via jupyter-book
+myst-parser==0.15.2
+    # via myst-nb
+nbclient==0.5.13
+    # via
+    #   jupyter-cache
+    #   nbconvert
+nbconvert==6.5.4
+    # via
+    #   jupyter-contrib-nbextensions
+    #   jupyter-latex-envs
+    #   jupyter-server
+    #   jupyter-sphinx
+    #   myst-nb
+    #   notebook
+nbdime==3.1.1
+    # via jupyter-cache
+nbformat==5.6.1
+    # via
+    #   jupyter-cache
+    #   jupyter-server
+    #   jupyter-sphinx
+    #   myst-nb
+    #   nbclient
+    #   nbconvert
+    #   nbdime
+    #   notebook
+nest-asyncio==1.5.6
+    # via
+    #   ipykernel
+    #   jupyter-client
+    #   nbclient
+    #   notebook
+notebook==6.4.12
+    # via
+    #   jupyter-contrib-core
+    #   jupyter-contrib-nbextensions
+    #   jupyter-latex-envs
+    #   jupyter-nbextensions-configurator
+    #   widgetsnbextension
+numpy==1.23.3
+    # via
+    #   -r requirements.in
+    #   contourpy
+    #   fluids
+    #   matplotlib
+    #   scipy
+packaging==21.3
+    # via
+    #   ipykernel
+    #   jupyter-server
+    #   matplotlib
+    #   nbconvert
+    #   pydata-sphinx-theme
+    #   sphinx
+pandocfilters==1.5.0
+    # via nbconvert
+parso==0.8.3
+    # via jedi
+pexpect==4.8.0
+    # via ipython
+pickleshare==0.7.5
+    # via ipython
+pillow==9.2.0
+    # via matplotlib
+pint==0.19.2
+    # via -r requirements.in
+prometheus-client==0.14.1
+    # via
+    #   jupyter-server
+    #   notebook
+prompt-toolkit==3.0.31
+    # via ipython
+psutil==5.9.2
+    # via ipykernel
+ptyprocess==0.7.0
+    # via
+    #   pexpect
+    #   terminado
+pure-eval==0.2.2
+    # via stack-data
+pybtex==0.24.0
+    # via
+    #   pybtex-docutils
+    #   sphinxcontrib-bibtex
+pybtex-docutils==1.0.2
+    # via sphinxcontrib-bibtex
+pycparser==2.21
+    # via cffi
+pydata-sphinx-theme==0.8.1
+    # via sphinx-book-theme
+pygments==2.13.0
+    # via
+    #   ipython
+    #   nbconvert
+    #   nbdime
+    #   sphinx
+pyparsing==3.0.9
+    # via
+    #   matplotlib
+    #   packaging
+pyrsistent==0.18.1
+    # via jsonschema
+python-dateutil==2.8.2
+    # via
+    #   jupyter-client
+    #   matplotlib
+pytz==2022.4
+    # via babel
+pyyaml==6.0
+    # via
+    #   jupyter-book
+    #   jupyter-contrib-nbextensions
+    #   jupyter-nbextensions-configurator
+    #   myst-nb
+    #   myst-parser
+    #   pybtex
+    #   sphinx-book-theme
+    #   sphinx-external-toc
+pyzmq==24.0.1
+    # via
+    #   ipykernel
+    #   jupyter-client
+    #   jupyter-server
+    #   notebook
+requests==2.28.1
+    # via
+    #   nbdime
+    #   sphinx
+scipy==1.9.2
+    # via
+    #   -r requirements.in
+    #   fluids
+send2trash==1.8.0
+    # via
+    #   jupyter-server
+    #   notebook
+six==1.16.0
+    # via
+    #   asttokens
+    #   bleach
+    #   jsonschema
+    #   latexcodec
+    #   pybtex
+    #   python-dateutil
+smmap==5.0.0
+    # via gitdb
+sniffio==1.3.0
+    # via anyio
+snowballstemmer==2.2.0
+    # via sphinx
+soupsieve==2.3.2.post1
+    # via beautifulsoup4
+sphinx==4.5.0
+    # via
+    #   jupyter-book
+    #   jupyter-sphinx
+    #   myst-nb
+    #   myst-parser
+    #   pydata-sphinx-theme
+    #   sphinx-book-theme
+    #   sphinx-comments
+    #   sphinx-copybutton
+    #   sphinx-design
+    #   sphinx-external-toc
+    #   sphinx-jupyterbook-latex
+    #   sphinx-multitoc-numbering
+    #   sphinx-thebe
+    #   sphinx-togglebutton
+    #   sphinxcontrib-bibtex
+sphinx-book-theme==0.3.3
+    # via jupyter-book
+sphinx-comments==0.0.3
+    # via jupyter-book
+sphinx-copybutton==0.5.0
+    # via jupyter-book
+sphinx-design==0.1.0
+    # via jupyter-book
+sphinx-external-toc==0.2.4
+    # via jupyter-book
+sphinx-jupyterbook-latex==0.4.7
+    # via jupyter-book
+sphinx-multitoc-numbering==0.1.3
+    # via jupyter-book
+sphinx-thebe==0.1.2
+    # via jupyter-book
+sphinx-togglebutton==0.3.2
+    # via
+    #   jupyter-book
+    #   myst-nb
+sphinxcontrib-applehelp==1.0.2
+    # via sphinx
+sphinxcontrib-bibtex==2.5.0
+    # via jupyter-book
+sphinxcontrib-devhelp==1.0.2
+    # via sphinx
+sphinxcontrib-htmlhelp==2.0.0
+    # via sphinx
+sphinxcontrib-jsmath==1.0.1
+    # via sphinx
+sphinxcontrib-qthelp==1.0.3
+    # via sphinx
+sphinxcontrib-serializinghtml==1.1.5
+    # via sphinx
+sqlalchemy==1.4.41
+    # via jupyter-cache
+stack-data==0.5.1
+    # via ipython
+sympy==1.11.1
+    # via -r requirements.in
+terminado==0.16.0
+    # via
+    #   jupyter-server
+    #   notebook
+tinycss2==1.1.1
+    # via nbconvert
+tornado==6.2
+    # via
+    #   ipykernel
+    #   jupyter-client
+    #   jupyter-contrib-core
+    #   jupyter-contrib-nbextensions
+    #   jupyter-nbextensions-configurator
+    #   jupyter-server
+    #   nbdime
+    #   notebook
+    #   terminado
+traitlets==5.4.0
+    # via
+    #   ipykernel
+    #   ipython
+    #   ipywidgets
+    #   jupyter-client
+    #   jupyter-contrib-core
+    #   jupyter-contrib-nbextensions
+    #   jupyter-core
+    #   jupyter-latex-envs
+    #   jupyter-nbextensions-configurator
+    #   jupyter-server
+    #   matplotlib-inline
+    #   nbclient
+    #   nbconvert
+    #   nbformat
+    #   notebook
+uc-micro-py==1.0.1
+    # via linkify-it-py
+urllib3==1.26.12
+    # via requests
+wcwidth==0.2.5
+    # via prompt-toolkit
+webencodings==0.5.1
+    # via
+    #   bleach
+    #   tinycss2
+websocket-client==1.4.1
+    # via jupyter-server
+wheel==0.37.1
+    # via
+    #   -r requirements.in
+    #   sphinx-togglebutton
+widgetsnbextension==3.6.1
+    # via ipywidgets
+zipp==3.9.0
+    # via importlib-metadata
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
